[gd_scene format=3 uid="uid://bkm8bke2p7ty7"]

[ext_resource type="Script" uid="uid://cvexexob85bnb" path="res://Assets/mask.gd" id="1_520j3"]
[ext_resource type="Material" uid="uid://bpyha5v53djv3" path="res://Materials/red.tres" id="1_an3eo"]
[ext_resource type="Material" uid="uid://bdoo3vefs7ewl" path="res://Materials/green.tres" id="3_vccx7"]
[ext_resource type="Material" uid="uid://bkseuk32hmrwh" path="res://Materials/blue.tres" id="4_tr2m3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_gc360"]

[sub_resource type="CylinderMesh" id="CylinderMesh_520j3"]
material = ExtResource("1_an3eo")
top_radius = 0.1
bottom_radius = 0.1
height = 0.03

[sub_resource type="BoxMesh" id="BoxMesh_gc360"]
material = ExtResource("1_an3eo")
size = Vector3(0.2, 0.15, 0.03)

[node name="Mask" type="Node3D" unique_id=81466868]
script = ExtResource("1_520j3")
materials_by_mode = Array[Material]([ExtResource("1_an3eo"), ExtResource("3_vccx7"), ExtResource("4_tr2m3")])

[node name="Area3D" type="Area3D" parent="." unique_id=295926891]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" unique_id=132763613]
shape = SubResource("BoxShape3D_gc360")

[node name="Pivot" type="Node3D" parent="." unique_id=1657542343]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pivot" unique_id=124478462]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0.1, 0, 0)
mesh = SubResource("CylinderMesh_520j3")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Pivot" unique_id=601943854]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, -0.1, 0, 0)
mesh = SubResource("CylinderMesh_520j3")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Pivot" unique_id=1345041857]
mesh = SubResource("BoxMesh_gc360")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
